[package]
name = "hn500-rs"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "4.3.0"
dotenv = { version = "0.15.0", optional = true }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
bytes = "1.5.0"
rss = "2.0"

[features]
dotenv = ["dep:dotenv"]
